test/extern/require/requireChapelParam.good
requireChapelParam.chpl:5: error: 'require' cannot handle non-literal '.chpl' files
Note: This source location is a guess.
